# Protocol-v2

./: .gitignore  Anchor.toml  LOCALNET_SETUP.md  package-lock.json  package.json  raw_delegation_expanded.rs  raw_lib_expanded.rs
programs/swiv_privacy/: Cargo.toml
programs/swiv_privacy/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/swiv_privacy/src/instructions/: delegation.rs  permission.rs
programs/swiv_privacy/src/instructions/admin/: batch_calculate_weights.rs  initialize_protocol.rs  set_pause.rs  transfer_admin.rs  update_config.rs
programs/swiv_privacy/src/instructions/pool/: add_stake.rs  claim_reward.rs  create_pool.rs  emergency_refund.rs  finalize_weights.rs  init_bet.rs  mod.rs  place_bet.rs  resolve_pool.rs  update_bet.rs
programs/swiv_privacy/src/state/: bet.rs  mod.rs  pool.rs  protocol.rs
programs/swiv_privacy/src/utils/: math.rs
tests/: admin_test.ts  pool_test.ts  utils.ts
